--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ncmb",
+  "name": "ncmb-twilio",
   "description": "JavaScript SDK for NIFCloud mobile backend",
   "version": "3.0.0",
   "homepage": "https://mbaas.nifcloud.com/",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NIFCloud-mbaas/ncmb_js"
+    "url": "git+https://github.com/goofmint/ncmb_js"
   },
   "maintainers": [
     {
